--- a/django_blog_project/blog/templates/blog/base.html
+++ b/django_blog_project/blog/templates/blog/base.html
@@ -16,7 +16,9 @@
 {% endif %}
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
